tests/ui/dont-stop-at-first-failure.goml
// Checks that all asserts are checking even if they all fail.
screenshot-comparison: false
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
assert: "#doesnt-exist"
//~^ ERROR: "#doesnt-exist" not found
assert-css: (".content>.right>p", {"font-size": "200px", "height": "30"})
//~^ ERROR: [expected `200px` for key `font-size`, found `16px`; expected `30` for key `height`, found `18px`]
assert-css-false: (".content>.right>p", {"font-size": "16px", "height": "18px"})
//~^ ERROR: [assert didn't fail for key `font-size`; assert didn't fail for key `height`]
